--- a/style.css
+++ b/style.css
@@ -1,46 +1,67 @@
 * {
-  /* box-sizing: border-box; */
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-:focus {
-  /* TODO */
+.search-container input:focus {
+  outline: 2px solid #ff8300;
 }
 
 body {
-  /* TODO */
-}
-
-input {
-  /* TODO */
+  background: linear-gradient(to right, #ffce01, #ff8300 70%);
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
 }
 
 .search-container {
-  /* TODO */
+  /* background-color: aqua; */
+  margin-top: 35vh;
 }
-.search-container input,
+
+/* .search-container input,
 .search-container .suggestions {
-  /* TODO */
-}
+} */
+
 .search-container input {
-  /* TODO */
+  /* background-color: aqua; */
+  font-size: 1.2rem;
+  border: none;
+  border-bottom: 3px solid #ff8300;
+  border-radius: 5px;
+  height: 6vh;
+  width: 30vw;
+  padding-left: 9px;
+  background-color: rgba(255, 247, 222, 0.3);
 }
+
 .search-container .suggestions {
-  /* TODO */
+  display: flex;
+  justify-content: center;
 }
 
 ul {
-  /* TODO */
+  list-style-type: none;
+  width: 30vw;
+  background-color: rgba(255, 247, 222, 0.3);
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
 }
+
+/* FOR BOLDED TEXT WHEN INPUT MATCHES CHAR IN RESULT */
 ul.has-suggestions {
   /* TODO */
 }
+
 ul li {
-  /* TODO */
-}
-ul li:hover {
-  /* TODO */
+  font-size: 1rem;
+  padding: 13px 5px;
 }
 
-input {
-  /* TODO */
+ul li:hover {
+  background-color: #ff8300;
 }
+
+/* input {
+} */
